# cic-sync-filter

./: CHANGELOG  requirements.txt  setup.cfg  test_requirements.txt
cic_sync_filter/: base.py  callback.py  filter.py  gas.py  log.py  parse.py  register.py  straggler.py  token.py  transferauth.py  tx.py
tests/: conftest.py  test_bogus_filter.py  test_callback_filter.py  test_filter_bogus.py  test_gas_filter.py  test_register_filter.py  test_straggler_filter.py  test_token_filter.py  test_transferauth_filter.py  test_tx_filter.py
