[metadata]
name = cic-sync-filter
version = 0.13.0
description = Code filters for use with cic chain trackers
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/grassrootseconomics/cic-sync-filter
keywords =
	cryptocurrency
	ethereum
	smartcontracts
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Software Development :: Libraries
	Topic :: Internet
	#Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE

[options]
include_package_data = True
python_requires = >= 3.7
packages = 
	cic_sync_filter
